force-app/main/default/objects/StarTrack_Settings__c/StarTrack_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>StarTrack custom settings</description>
    <label>StarTrack Settings</label>
</CustomObject>