force-app/main/default/objects/StarTrack_Settings__c/fields/BSC_Fedex_Pick__c.field-meta.xml
<CustomField>
    <fullName>BSC_Fedex_Pick__c</fullName>
    <label>BSC - Fedex Pickups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>