force-app/main/default/objects/StarTrack_Settings__c/fields/BSC_Phillips_Schenker__c.field-meta.xml
<CustomField>
    <fullName>BSC_Phillips_Schenker__c</fullName>
    <label>BSC – Phillips (Schenker)</label>
    <type>Email</type>
</CustomField>