force-app/main/default/objects/StarTrack_Settings__c/fields/BSC_Stop_Delivery__c.field-meta.xml
<CustomField>
    <fullName>BSC_Stop_Delivery__c</fullName>
    <label>BSC - Stop Delivery</label>
    <type>Email</type>
</CustomField>