force-app/main/default/objects/StarTrack_Settings__c/fields/BSP_Community_User_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>BSP_Community_User_Profile_Id__c</fullName>
    <description>This will store the profile id of &apos;BSP Community User&apos;.</description>
    <inlineHelpText>This will store the profile id of &apos;BSP Community User&apos;.</inlineHelpText>
    <label>BSP Community User Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>