force-app/main/default/objects/StarTrack_Settings__c/fields/Create_Call_Log_using_Future__c.field-meta.xml
<CustomField>
    <fullName>Create_Call_Log_using_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if call log record will be created via @future annotation or not.</description>
    <label>Create Call Log using Future</label>
    <type>Checkbox</type>
</CustomField>