force-app/main/default/objects/StarTrack_Settings__c/fields/Email2Case_Check_Last_X_Days__c.field-meta.xml
<CustomField>
    <fullName>Email2Case_Check_Last_X_Days__c</fullName>
    <label>Email2Case Check Last X Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>