force-app/main/default/objects/StarTrack_Settings__c/fields/EMS_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>EMS_Endpoint__c</fullName>
    <description>StarTrack - EMS Endpoint</description>
    <label>EMS Endpoint</label>
    <type>Url</type>
</CustomField>