force-app/main/default/objects/StarTrack_Settings__c/fields/Investigators_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Investigators_From_Email__c</fullName>
    <label>Investigators From Email</label>
    <type>Email</type>
</CustomField>