force-app/main/default/objects/StarTrack_Settings__c/fields/LDC_Delivery_Events_Error__c.field-meta.xml
<CustomField>
    <fullName>LDC_Delivery_Events_Error__c</fullName>
    <label>LDC Delivery Events Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>