force-app/main/default/objects/StarTrack_Settings__c/fields/Log_for__c.field-meta.xml
<CustomField>
    <fullName>Log_for__c</fullName>
    <label>Log for</label>
    <length>50</length>
    <type>Text</type>
</CustomField>