force-app/main/default/objects/StarTrack_Settings__c/fields/Logging__c.field-meta.xml
<CustomField>
    <fullName>Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logging</label>
    <type>Checkbox</type>
</CustomField>