force-app/main/default/objects/StarTrack_Settings__c/fields/Next_Flight_Case_Consignment__c.field-meta.xml
<CustomField>
    <fullName>Next_Flight_Case_Consignment__c</fullName>
    <description>Queue Name when related consignment (article) = &quot;Next Flight&quot;</description>
    <inlineHelpText>Queue Name when related consignment (article) = &quot;Next Flight&quot;</inlineHelpText>
    <label>Next Flight Case Consignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>