force-app/main/default/objects/StarTrack_Settings__c/fields/Number_of_Hours_per_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_per_Business_Days__c</fullName>
    <label>Number of Hours per Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>