force-app/main/default/objects/StarTrack_Settings__c/fields/PBE_Controlled_Returns__c.field-meta.xml
<CustomField>
    <fullName>PBE_Controlled_Returns__c</fullName>
    <description>Delivery Enquiry Queue Name when Purpose = &quot;Controlled Returns&quot;</description>
    <inlineHelpText>Delivery Enquiry Queue Name when Purpose = &quot;Controlled Returns&quot;</inlineHelpText>
    <label>PBE Controlled Returns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>