force-app/main/default/objects/StarTrack_Settings__c/fields/PBE_ETA_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>PBE_ETA_Enquiry__c</fullName>
    <description>Pickup Booking Enquiry Queue Name when Purpose = &quot;Pickup ETA&quot;</description>
    <inlineHelpText>Pickup Booking Enquiry Queue Name when Purpose = &quot;Pickup ETA&quot;</inlineHelpText>
    <label>PBE Pickup ETA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>