force-app/main/default/objects/StarTrack_Settings__c/fields/PBE_Missed_Futile_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>PBE_Missed_Futile_Enquiry__c</fullName>
    <description>Pickup Booking Enquiry Queue Name when Purpose = &quot;Missed Pickup&quot;</description>
    <inlineHelpText>Pickup Booking Enquiry Queue Name when Purpose = &quot;Missed Pickup&quot;</inlineHelpText>
    <label>PBE Missed Pickup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>