force-app/main/default/objects/StarTrack_Settings__c/fields/Redelivery_Redirection_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Redelivery_Redirection_Enquiry__c</fullName>
    <label>Redelivery/Redirection Enquiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>