force-app/main/default/objects/StarTrack_Settings__c/fields/StarTrack_24_7_Business_Hour__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_24_7_Business_Hour__c</fullName>
    <label>StarTrack 24/7 Business Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>