force-app/main/default/objects/StarTrack_Settings__c/fields/StarTrack_ConSearch_Authentication_Level__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_ConSearch_Authentication_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Level of Authentication for Consignment Search Interface</description>
    <inlineHelpText>1 - Basic Authentication
2 - Mutual SSL</inlineHelpText>
    <label>StarTrack ConSearch Authentication Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>