force-app/main/default/objects/StarTrack_Settings__c/fields/StarTrack_ConSearch_BA_Password__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_ConSearch_BA_Password__c</fullName>
    <description>StarTrack - ConSearch Basic Authentication Credentials stored as Base64. 
Value in field must be set to Base64 Encoded value of Username, Colon and Password i.e. Base64(username:password)</description>
    <inlineHelpText>&quot;Base64(username:password)&quot;</inlineHelpText>
    <label>StarTrack ConSearch BA Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>