force-app/main/default/objects/StarTrack_Settings__c/fields/StarTrack_ConSearch_Client_Cert__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_ConSearch_Client_Cert__c</fullName>
    <description>StarTrack - ConSearch Client Cert</description>
    <label>StarTrack ConSearch Client Cert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>