force-app/main/default/objects/StarTrack_Settings__c/fields/StarTrack_Related_Contact_RecType_Id__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_Related_Contact_RecType_Id__c</fullName>
    <description>This will store startrack related contact record type Id.</description>
    <label>StarTrack Related Contact RecType Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>