force-app/main/default/objects/StarTrack_Settings__c/fields/StarTrack_SMS_Suffix__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_SMS_Suffix__c</fullName>
    <label>StarTrack SMS Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>