force-app/main/default/objects/StarTrack_Settings__c/fields/Sync_Web_Service_Callout_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Sync_Web_Service_Callout_Timeout__c</fullName>
    <label>Sync Web Service Callout Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>