force-app/main/default/objects/StarTrack_Settings__c/fields/Transit_Warranty_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Transit_Warranty_From_Email__c</fullName>
    <label>Transit Warranty From Email</label>
    <type>Email</type>
</CustomField>