force-app/main/default/objects/StarTrack_Settings__c/fields/Use_Continuation_for_Consignment_Search__c.field-meta.xml
<CustomField>
    <fullName>Use_Continuation_for_Consignment_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To use Continuation server for Consignment Search, set this to true.</description>
    <label>Use Continuation for Consignment Search</label>
    <type>Checkbox</type>
</CustomField>