force-app/main/default/objects/StarTrack_Settings__c/fields/VOC_From_Email__c.field-meta.xml
<CustomField>
    <fullName>VOC_From_Email__c</fullName>
    <label>VOC From Email</label>
    <type>Email</type>
</CustomField>