force-app/main/default/objects/StarTrack_Settings__c/fields/Web_Service_Callout_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Web_Service_Callout_Timeout__c</fullName>
    <defaultValue>30</defaultValue>
    <description>StarTrack - Web Service Callout Timeout</description>
    <label>Async Web Service Callout Timeout</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>