force-app/main/default/objects/StarTrack_Settings__c/fields/XML_Logging__c.field-meta.xml
<CustomField>
    <fullName>XML_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XML Logging</label>
    <type>Checkbox</type>
</CustomField>